style.css
/* GENERAL SETTINGS */

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: 'Lato', sans-serif;
}


/********************************/

html, body {
  height: 100%;
}


/************ HEADER ************/

header {
  width: 100%;
  height: 50px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  background-color: #000;
  color: #ddd;
}

.header_logo_container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.header_logo {
  letter-spacing: .1em;
}

.header_logo span {
  color: red;
}

.header_searchbar_container {
  background-color: #fff;
  display: flex;
  justify-content: space-around;
}

.header_searchbar_icon {
  margin-right: 7px;
}

.header_links_container {
  width: 50%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%
}

.header_links_list {}

.header_links_listitem {
  height: 100%;
  display: flex;
  align-items: column;
  width: 33%;
  text-align: center;
  text-transform: uppercase;
}

.header_links_listitem:hover {
  background-color: red;
  color: #000;
}

.header_links_listitem a {
  text-decoration: none;
  color: #ddd;
  height: 100%;
  width: 100%;
  margin: auto;

  display: flex;
  align-items: center;
  justify-content: center;
}

.header_links_listitem:hover a {
  color: #000;
}

.active_page {
  height: 100%;
  display: flex;
  align-items: column;
  width: 33%;
  text-align: center;
  text-transform: uppercase;
  background-color: red;
  color: #000;
}

.active_page a {
  text-decoration: none;
  height: 100%;
  width: 100%;
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #000;
}


/********** HEADER end **********/


/********* MAIN CONTENT *********/
/* This is where the main css goes */

/********* LANDING PAGE *********/

#landing_page_banner {
	width: 85%;
	box-shadow: 0 0 20px 0 #333;
	border-radius: 10px;
	margin: 3% auto;
	text-align: center;
}
#landing_page_banner h1 {
	padding: 5% 5% 0 5%;
	text-transform: uppercase;
	letter-spacing: .1em;
}

#landing_page_banner h2 {
	padding: 5%;
}

#landing_page_banner span {
	color: red;
	font-size: 1.3em;
}
#landing_page_content {
	margin: 0 auto;
	display: flex;
	justify-content: center;
}
#landing_page_product_button {
	padding: 10%;
	border-radius: 10px;
	border: none;
	outline: none;
	background-color: blue;
	color: #ddd;
	font-size: 2em;
	cursor: pointer;
	box-shadow: 0 0 20px 0 #333;
}
/******* LANDING PAGE end *******/


/******** PRODUCT CONTENT ********/

#page {
  text-align: center;
  margin-top: 50px;
}

#logo {
  margin-bottom: 50px;
}

#main_product_container {
  background-color: white;
  width: 800px;
  margin: auto;
  display: flex;
  justify-content: space-around;
}

.table_container {
  padding: 5px;
}

table {
  font-family: arial, sans-serif;
  border-collapse: collapse;
  /* width: 100%; */
}

td, th {
  text-align: left;
  padding: 8px;
  border: 1px solid #dddddd;
}

tr:nth-child(even) {
  background-color: #dddddd;
}

.product_buy_button {
  padding: 10px 20px;
  border-radius: 10px;
  background-color: green;
  color: white;
  border: none;
  letter-spacing: .1em;
}

.product_buy_button:active {
  background-color: rgba(0, 100, 0, 0.5);
}


/******** PRODUCT CONTENT END ********/


/********CONTACT CONTENT********/

.formdiv {
  height: 81%;
  display: flex;
  justify-content: center;
  align-items: center;

}
.contactForm{
	background:blue;
  color: white;
	padding: 20px;
	border-radius: 5px;
	box-shadow: 5px 5px 10px #888888;
}

.formField {
  padding: 20px 70px 20px 50px;
  border-radius: 5px;
  border-color: #42afc7;
  background-color: #ff5a5a;

}

.formHeading {
  margin-bottom: 20px;
}

.labelBox {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.labels {
  display: flex;
  justify-content: space-between;
  width: 230px;
  margin-bottom: 10px;
}

.message {
  max-height: 200px;
  max-width: 1000px;
  min-width: 250px;
  resize: none;
}

select {
  margin-bottom: 10px;
}

.formButton {
	color:red;
	
  display: flex;
  justify-content: flex-end;
}

/********CONTACT END********/


/* This is where the main css goes */


/******* MAIN CONTENT end *******/


/************ FOOTER ************/

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 85px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  background-color: #000;
  color: #ddd;
}

.footer_social_icons_container {
  margin-top: 10px;
  display: flex;
  justify-content: center;
}

.footer_social_icons_container img {
  height: 30px;
  margin: 7px;
}

.footer_contact_list {
  list-style-type: none;
  margin-top: 10px;
}


/********** FOOTER end **********/


/*Media queries*/

@media screen and (max-width:768px) {
  /******CONTACT FORM START*******/
  .formHeading {
    font-size: 20px;
  }
  .formField {
    padding: 10px 25px 10px 25px;
    border-radius: 5px;
  }
  select {
    margin-bottom: 5px;
  }
  .labels {
    margin-bottom: 5px;
  }
  .message {
    width: 230px;
    resize: none;
  }
  /******CONTACT FORM END*******/

	header div h1{
		font-size: 20px;
	}
  header{
    justify-content: space-around;

  }
	header div a{
		font-size: 10px;
	}
.header_links_listitem{
  padding-right:5px;
  padding-left:5px;
}
.active_page{  padding-right:5px;
  padding-left: 5px;}

	.header_searchbar_container, .header_searchbar_container{
		display: none;
	}

footer{
	font-size: 10px;
  position: absolute;
}

#main_product_container {
    width:auto;
    flex-direction: column;
    align-items: center;
    margin-bottom: 20px;
}

}


}

